--- a/WIL_Protoype/WIL_Protoype.csproj
+++ b/WIL_Protoype/WIL_Protoype.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Mail.dll" Version="3.0.21134.1059" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.7" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
